chore: remove unused code and clean up project structure

--- a/MERN STACK/BACKEND/.env
+++ b/MERN STACK/BACKEND/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://surajkumar:rNytt77g85qb4Ykd@clusterone.zr9hftv.mongodb.net/
+MONGODB_URI=mongodb+srv://surajkumar:qwerty1234@cluster0.pwdnvl5.mongodb.net/myAppDB?retryWrites=true&w=majority
